fix: responsive for iphone overflow-x

--- a/Grid-column-and-box/index.css
+++ b/Grid-column-and-box/index.css
@@ -18,6 +18,7 @@ main{
 
     grid-auto-flow: column dense; /*hace que se coloquen los cuadraditos y las columnas condensados¿???? si pongo row el scroll va hacia abajo si pongo column va de lado. HAY QUE PONER EL DENSE PARA RELLLENAR EL ESPACIO*/
 
+    overflow-x: auto;
   /* o por COLUMNAS:
     grid-auto-columns: repeat(autofit, minmax(150px, 1fr));
     grid-auto-flow: column dense;
@@ -33,7 +34,7 @@ div{
     border-radius: 5px;
 }
 
-/*caDA X NUMERO CAMBIAR DE COLOR*/
+/*cada X NUMERO CAMBIAR DE COLOR*/
 
 div:nth-child(3n) {/*cada 3 div:*/
     background-color: rgb(173, 102, 20);
